--- a/BillC/package.json
+++ b/BillC/package.json
@@ -20,8 +20,21 @@
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
+    "@firebase/util": "^0.4.1",
+    "@ionic-native/camera": "^5.32.1",
+    "@ionic-native/core": "^5.32.1",
+    "@ionic-native/crop": "^5.32.1",
+    "@ionic-native/file": "^5.32.1",
+    "@ionic-native/file-path": "^5.32.1",
+    "@ionic-native/ionic-webview": "^5.32.1",
     "@ionic/angular": "^5.5.2",
+    "@ionic/storage": "^3.0.4",
+    "@ionic/storage-angular": "^3.0.6",
     "cordova-browser": "6.0.0",
+    "cordova-plugin-camera": "^5.0.1",
+    "cordova-plugin-crop": "^0.4.0",
+    "cordova-plugin-file": "^6.0.2",
+    "cordova-sqlite-storage": "^6.0.0",
     "firebase": "^8.4.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -43,6 +56,7 @@
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/parser": "4.16.1",
+    "cordova-android": "^9.1.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.2.1",
@@ -73,10 +87,15 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-camera": {},
+      "cordova-plugin-file": {},
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-crop": {}
     },
     "platforms": [
-      "browser"
+      "browser",
+      "android"
     ]
   }
 }
